# typespec-py

./: .flake8  Makefile  QWEN.md  README.md  example.py  example.tsp  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: __init__.py  test_generated_dataclasses.py  test_parser.py
typespec_parser/: __init__.py  cli.py  parser.py  parsimonious_parser.py
typespec_parser/peg/: __init__.py  parser.py
